[gd_scene load_steps=20 format=2]

[ext_resource path="res://game_screen/entities/towers/player_tower.gd" type="Script" id=1]
[ext_resource path="res://util/state_label.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui.png" type="Texture" id=3]
[ext_resource path="res://assets/turrets.png" type="Texture" id=4]
[ext_resource path="res://game_screen/entities/towers/tower_variant1.tres" type="Resource" id=5]

[sub_resource type="CircleShape2D" id=15]
resource_local_to_scene = true

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), null, null, null, null, null ],
"loop": true,
"name": "shot1",
"speed": 10.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "shot0",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.638, 15.039 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 24, 8, 8 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="PlayerTower" type="Node2D" groups=["PlayerTower"]]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 1 )
variant = ExtResource( 5 )
range_color = Color( 0.239216, 0.407843, 0.117647, 0.12549 )

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 2

[node name="RangeShape" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource( 15 )
disabled = true

[node name="BaseSprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="TowerContainer" type="Node2D" parent="."]

[node name="TowerSprite" type="Sprite" parent="TowerContainer"]
rotation = -1.5708
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 64, 0, 64, 64 )

[node name="ShotAnimation" type="AnimatedSprite" parent="TowerContainer"]
visible = false
position = Vector2( 51.9269, 0 )
frames = SubResource( 9 )
animation = "shot1"
frame = 6

[node name="Control" parent="." instance=ExtResource( 2 )]
margin_left = -5.82742
margin_top = -8.39322
margin_right = 31.1726
margin_bottom = 5.60678
rect_scale = Vector2( 0.33, 0.33 )

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 2 )

[node name="PowerIndicator" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 25.7153, -16.7432 )
frames = SubResource( 5 )
playing = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="RangeArea" to="." method="_on_RangeArea_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_RangeArea_body_exited"]
[connection signal="animation_finished" from="TowerContainer/ShotAnimation" to="." method="_on_ShotAnimation_animation_finished"]
[connection signal="input_event" from="ClickArea" to="." method="_on_ClickArea_input_event"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
